--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "loop-challenges",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -10,6 +9,6 @@
   "license": "ISC",
   "dependencies": {
     "request": "*",
-    "jasmine-galvanize-poster": "gSchool/jasmine-galvanize-poster"
+    "jasmine-galvanize-poster": "git+https://github.com/gSchool/jasmine-galvanize-poster"
   }
 }
